--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "^4.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3"
   },
   "private": true
 }
