--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.37",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-status-bar": "^2.0.1",
+    "lucide-react-native": "^0.476.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1"
