--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "violencimetro",
+  "name": "Vimo",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,9 +14,15 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.37",
+    "expo-av": "~15.0.2",
+    "expo-contacts": "^14.0.5",
     "expo-linear-gradient": "^14.0.2",
+    "expo-location": "^18.0.7",
+    "expo-sms": "^13.0.1",
     "lucide-react-native": "^0.476.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1"
   },
