Update app package name in app.json and remove lucide-react-native dependency from package.json

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/Leon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.yair_hdz24.Vimo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
